AG-43967 Fix broken settings screen [assistant]
Merge in EXTENSIONS/assistant from fix/AG-43967 to master

Squashed commit of the following:

commit 82bb5c3038dc74d20234b8b260d701a529684d3a
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Jul 29 12:01:21 2025 +0500

    updated changelog

commit d64160eac04d6080805860c702855a9e05e178e8
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Jul 29 11:21:35 2025 +0500

    AG-43967 Fix broken settings screen [assistant]

--- a/src/styles/base/buttons.less
+++ b/src/styles/base/buttons.less
@@ -110,3 +110,57 @@ input[type="button"] {
         cursor: pointer;
     }
 }
+
+// Old button styles
+.old-btn {
+    display: inline-block;
+    margin-bottom: 0;
+    padding: 10px 20px;
+    font-size: 13px;
+    line-height: 18px;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    user-select: none;
+
+    &:hover {
+        color: #000;
+        text-decoration: none;
+    }
+    &:active, &.active {
+        outline: none;
+    }
+    &:focus {
+        outline: none;
+        box-shadow: inset 0 0 0 1px #fff;
+    }
+    &[disabled], &.disabled {
+        cursor: default;
+        box-shadow: none;
+        opacity: .5;
+        pointer-events: none;
+    }
+}
+
+.old-btn-default {
+    border-color: @secondary-color;
+    background: @secondary-color;
+    color: #fff;
+    &:hover {
+        border-color: lighten(@secondary-color, 10%);
+        background: lighten(@secondary-color, 10%);
+        color: #fff;
+    }
+    &.active, &:active {
+        border-color: lighten(@secondary-color, 10%);
+        background: lighten(@secondary-color, 10%);
+    }
+    &.disabled, &[disabled] {
+        border-color: @secondary-color;
+        background: @secondary-color;
+    }
+}
